=======
CHANGES
=======

3.12.0 (unreleased)
-------------------

- Notify with IStartRequestEvent at the start of the request publication
  cycle.


3.11.1 (2010-04-19)
-------------------

- Fix up tests to work with newer zope.app.wsgi release (3.9.0).

3.11.0 (2010-04-13)
-------------------

- Don't depend on zope.app.testing and zope.app.zcmlfiles anymore in
  the tests.

3.10.2 (2010-01-08)
-------------------

- Lift the test dependency on zope.app.zptpage.


3.10.1 (2010-01-08)
-------------------

- make zope.testing an optional (test) dependency

- Fix tests using a newer zope.publisher that requires zope.login.

3.10.0 (2009-12-15)
-------------------

- Moved EndRequestEvent and IEndRequestEvent to zope.publisher.

- Moved BeforeTraverseEvent and IBeforeTraverseEvent to zope.traversing.

- Removed dependency on zope.i18n.

- Import hooks functionality from zope.component after it was moved there from
  zope.site.

- Import ISite from zope.component after it was moved there from
  zope.location.

3.9.0 (2009-09-29)
------------------

- An abort within handleExceptions could have failed without logging what
  caused the error. It now logs the original problem.

- Moved registration of and tests for two publication-specific event handlers
  here from zope.site in order to invert the package dependency.

- Declared the missing dependency on zope.location.

3.8.1 (2009-06-21)
------------------

- Bug fix: The publication traverseName method used ProxyFactory
  rather than the publication proxy method.

3.8.0 (2009-06-20)
------------------

- Added a proxy method that can be overridden in subclasses to control
  how/if security proxies are created.

- Replaced zope.deprecation dependency with backward-compatible imports

3.7.0 (2009-05-23)
------------------

- Moved the publicationtraverse module to zope.traversing, removing the
  zope.app.publisher -> zope.app.publication dependency (which was a
  cycle).
