@@ -5,9 +5,11 @@ CHANGES
 3.12.0 (unreleased)
 -------------------
 
+- Include the ``notfound.txt`` test again but reduce its scope to functionality
+  relevant to this distribution.
+
 - Notify with IStartRequestEvent at the start of the request publication
   cycle.
-
 
 3.11.1 (2010-04-19)
 -------------------
